@@ -89,7 +89,7 @@ public class ConnOpts extends JPanel implements ActionListener {
 
         // Should persistence be used for the WMQtt connection?
         persistEnable = new JCheckBox();
-        Boolean b = new Boolean( props.getProperty( "Persistence", String.valueOf(false) ) );
+        Boolean b = Boolean.valueOf( props.getProperty( "Persistence", String.valueOf(false) ) );
         persistEnable.setSelected( b.booleanValue() );
         persistEnable.setToolTipText("Persist publications to ensure delivery");
                 
@@ -268,7 +268,7 @@ public class ConnOpts extends JPanel implements ActionListener {
     public short getKeepAlive() {
     	Integer i;
     	try {
-    		i = new Integer( keepAlive.getText() );
+    		i = Integer.valueOf( keepAlive.getText() );
     	} catch ( NumberFormatException e) {
     		// Invalid entry set - use the default
     		keepAlive.setText(KEEP_ALIVE);
@@ -284,7 +284,7 @@ public class ConnOpts extends JPanel implements ActionListener {
     public int getRetryInterval() {
     	Integer i;
     	try {
-    		i = new Integer( retryInterval.getText() );
+    		i = Integer.valueOf( retryInterval.getText() );
     	} catch ( NumberFormatException e) {
     		// Invalid entry set - use the default
     		retryInterval.setText(RETRY_INT);
